# auso-api

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 001_init.sql  002_add_video_title_description.sql  003_hashtags_interests_impressions.sql  004_blocked_hashtags.sql
src/: config.rs  db.rs  errors.rs  main.rs  routes.rs
src/handlers/: auth.rs  channels.rs  comments.rs  communities.rs  discovery.rs  follows.rs  groups.rs  media.rs  mod.rs  polls.rs  posts.rs  recommend.rs  streaming.rs  users.rs
src/middleware/: auth.rs
src/models/: channel.rs  comment.rs  community.rs  discovery.rs  follow.rs  group.rs  like.rs  media.rs  mod.rs  poll.rs  post.rs  user.rs
src/services/: media.rs  mod.rs  video.rs
