[package]
name = "auso-api"
version = "0.1.0"
edition = "2021"
description = "AUSO (AURA SOCIAL) - Social Network API"

[dependencies]
actix-web = "4"
actix-multipart = "0.7"
actix-files = "0.6"
actix-cors = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.16"
jsonwebtoken = "9"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.18", features = ["derive"] }
thiserror = "2"
futures-util = "0.3"
sanitize-filename = "0.6"
rand = "0.8"
